# mdfried

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  screenshot-tests.nix
.github/workflows/: build.yml  fast-forward.yml  screenshots.yaml
assets/: screenshot-test.md
ratskin/: Cargo.toml
src/: main.rs  markdown.rs  model.rs  setup.rs  widget_sources.rs
src/markdown/: blocks.rs
src/snapshots/: mdfried__tests__duplicate image done.snap  mdfried__tests__duplicate image preview.snap  mdfried__tests__first parse done.snap  mdfried__tests__reload add image done.snap  mdfried__tests__reload add image preview.snap  mdfried__tests__reload move image up.snap
